--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -172,10 +172,10 @@
                     <table id="attributesTable" class="table nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th ng-i18next>attributes_table_header_name</th>
-                            <th ng-i18next>attributes_table_header_action_bonus</th>
-                            <th ng-i18next>attributes_table_header_description</th>
-                            <th ng-i18next>attributes_table_header_actions</th>
+                            <th ng-i18next>table_header_name</th>
+                            <th ng-i18next>table_header_action_bonus</th>
+                            <th ng-i18next>table_header_description</th>
+                            <th ng-i18next>table_header_actions</th>
                         </tr>
                         </thead>
                     </table>
