fix bug update merits after update inherents

--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -282,7 +282,7 @@
                                 </td>
                                 <td>
                                     <button class="btn btn-default-outline btn-rounded btn-sm"
-                                            ng-click="deletePersonageInherent(personageInherent.id)">
+                                            ng-click="deletePersonageInherent(personageInherent)">
                                         Удалить
                                     </button>
                                 </td>
