--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -284,7 +284,7 @@
                                 </td>
                                 <td>
                                     <button class="btn btn-default-outline btn-rounded btn-sm"
-                                            ng-click="deletePersonageInherent(personageInherent.id)">
+                                            ng-click="deletePersonageInherent(personageInherent)">
                                         Удалить
                                     </button>
                                 </td>
