--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -148,6 +148,12 @@
                     </div>
                 </div>
 
+                <div class="menu-user-block">
+                    <a class="menu-user-info-block nohover" href="javascript: void(0)" ng-click="editExperince()">
+                        <span class="user-name">XP: <strong>{{personage.experience}}</strong></span>
+                    </a>
+                </div>
+
                 <div class="menu-info-block">
                     <div class="left">
                         <div class="menu-info-block">
