--- a/public/views/attached_skills/attached_skill.html
+++ b/public/views/attached_skills/attached_skill.html
@@ -50,7 +50,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <h1 ng-i18next>brand_name</h1>
+                    <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
@@ -58,55 +58,55 @@
                     <li>
                         <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_characters</span>
+                            <span ng-i18next>left_menu.characters</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_races</span>
+                            <span ng-i18next>left_menu.races</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                             <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                            <span ng-i18next>left_menu_attributes</span>
+                            <span ng-i18next>left_menu.attributes</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                             <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                            <span ng-i18next>left_menu_inherents</span>
+                            <span ng-i18next>left_menu.inherents</span>
                         </a>
                     </li>
                     <li class="left-menu-list-active">
                         <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                             <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                            <span ng-i18next>left_menu_attached_skills</span>
+                            <span ng-i18next>left_menu.attached_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                             <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                            <span ng-i18next>left_menu_trigger_skills</span>
+                            <span ng-i18next>left_menu.trigger_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/merits/merit_manager.html">
                             <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                            <span ng-i18next>left_menu_merits</span>
+                            <span ng-i18next>left_menu.merits</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
                             <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                            <span ng-i18next>left_menu_flaws</span>
+                            <span ng-i18next>left_menu.flaws</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/spells/spells_manager.html">
                             <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                            <span ng-i18next>left_menu_spells</span>
+                            <span ng-i18next>left_menu.spells</span>
                         </a>
                     </li>
                 </ul>
@@ -124,7 +124,7 @@
                         <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
                             <span class="user-name"><span
-                                    ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
+                                    ng-i18next>top_menu.player</span><strong> {{player.name}}</strong></span>
                             <span class="avatar" href="#">
                         <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                              alt="Здесь должен быть аватар">
@@ -133,17 +133,17 @@
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="/views/profile/profile.html"><i
                                     class="dropdown-icon icmn-user"></i><span
-                                    ng-i18next>top_menu_dropdown_profile</span></a>
+                                    ng-i18next>top_menu.dropdown.profile</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
+                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu.dropdown.characters</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
+                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu.dropdown.logout</span></a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                             <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                                ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
-                                    ng-i18next>top_menu_dropdown_admin</span></a>
+                                    ng-i18next>top_menu.dropdown.admin</span></a>
                         </ul>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         <div class="menu-info-block">
                             <div class="example-buy-btn hidden-xs-down">
                                 <div class="btn expir btn-success-outline btn-rounded">
-                                    <span ng-i18next>top_menu_role</span> {{player.Role.name}}
+                                    <span ng-i18next>top_menu.role</span> {{player.Role.name}}
                                 </div>
                             </div>
                         </div>
@@ -169,64 +169,25 @@
                 <div class="panel-heading">
                     <h3 class="text-center"><a href="attached_skills_manager.html"
                                                class="pull-left link-underlined link-blue"><i
-                            class="icmn-arrow-left2"></i> Назад</a>Базовые броски для {{attachedSkill.name}} <a href="#"
-                                                                                             class="link-underlined link-blue"
-                                                                                             data-toggle="modal"
-                                                                                             data-target="#addRoll"
-                                                                                             ng-click="clearForm()">Добавить</a>
+                            class="icmn-arrow-left2"></i><span ng-i18next>general.back</span></a>
+                        <span ng-i18next>page.attached_skill.header</span> {{attachedSkill.name}} <a href="#"
+                                                                                                     class="link-underlined link-blue"
+                                                                                                     ng-click="showAddDialog()"
+                                                                                                     ng-i18next>popup.add_button</a>
                     </h3>
 
                 </div>
 
                 <div class="panel-body">
-                    <table id="rollsTable" class="table nowrap" width="100%" cellspacing="0">
+                    <table id="rollsTable" class="table table-hover nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>Бросок</th>
-                            <th>Описание</th>
-                            <th>Действия</th>
+                            <th>{{table_header_roll}}</th>
+                            <th>{{table_header_description}}</th>
+                            <th>{{table_header_actions}}</th>
                         </tr>
                         </thead>
                     </table>
-                </div>
-                <div class="modal fade" id="addRoll" tabindex="-1" role="dialog"
-                     aria-labelledby="addRollModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                                    &times;
-                                </button>
-                                <h4 class="modal-title">Добавить бросок</h4>
-                            </div>
-                            <div class="modal-body">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="attribute_id" class="form-control-label">Атрибут:</label>
-                                        <select class="form-control"
-                                                name="attribute"
-                                                ng-model="attribute_id" id="attribute_id"
-                                                ng-options="attribute.id as attribute.name for attribute in attributes" required>
-                                            <option style="display:none" value="">Выберите атрибут...</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="roll_description" class="form-control-label">Описание броска:</label>
-                                        <textarea class="form-control form-control-rounded"
-                                                  id="roll_description" ng-model="roll_description"></textarea>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-primary btn-rounded" ng-click="addAttributeAttachedSkill()">
-                                    Добавить
-                                </button>
-                                <button type="button" class="btn btn-secondary btn-rounded" data-dismiss="modal">
-                                    Отменить
-                                </button>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
 
