--- a/public/views/merits/merit_manager.html
+++ b/public/views/merits/merit_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Список недостатков</title>
+    <title>Merits</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
@@ -50,7 +50,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <h1 ng-i18next>brand_name</h1>
+                    <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
@@ -58,55 +58,55 @@
                     <li>
                         <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_characters</span>
+                            <span ng-i18next>left_menu.characters</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_races</span>
+                            <span ng-i18next>left_menu.races</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                             <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                            <span ng-i18next>left_menu_attributes</span>
+                            <span ng-i18next>left_menu.attributes</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                             <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                            <span ng-i18next>left_menu_inherents</span>
+                            <span ng-i18next>left_menu.inherents</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                             <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                            <span ng-i18next>left_menu_attached_skills</span>
+                            <span ng-i18next>left_menu.attached_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                             <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                            <span ng-i18next>left_menu_trigger_skills</span>
+                            <span ng-i18next>left_menu.trigger_skills</span>
                         </a>
                     </li>
                     <li class="left-menu-list-active">
                         <a class="left-menu-link" href="/views/merits/merit_manager.html">
                             <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                            <span ng-i18next>left_menu_merits</span>
+                            <span ng-i18next>left_menu.merits</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
                             <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                            <span ng-i18next>left_menu_flaws</span>
+                            <span ng-i18next>left_menu.flaws</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/spells/spells_manager.html">
                             <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                            <span ng-i18next>left_menu_spells</span>
+                            <span ng-i18next>left_menu.spells</span>
                         </a>
                     </li>
                 </ul>
@@ -124,7 +124,7 @@
                         <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
                             <span class="user-name"><span
-                                    ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
+                                    ng-i18next>top_menu.player</span><strong> {{player.name}}</strong></span>
                             <span class="avatar" href="#">
                         <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                              alt="Здесь должен быть аватар">
@@ -133,17 +133,17 @@
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="/views/profile/profile.html"><i
                                     class="dropdown-icon icmn-user"></i><span
-                                    ng-i18next>top_menu_dropdown_profile</span></a>
+                                    ng-i18next>top_menu.dropdown.profile</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
+                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu.dropdown.characters</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
+                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu.dropdown.logout</span></a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                             <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                                ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
-                                    ng-i18next>top_menu_dropdown_admin</span></a>
+                                    ng-i18next>top_menu.dropdown.admin</span></a>
                         </ul>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                         <div class="menu-info-block">
                             <div class="example-buy-btn hidden-xs-down">
                                 <div class="btn expir btn-success-outline btn-rounded">
-                                    <span ng-i18next>top_menu_role</span> {{player.Role.name}}
+                                    <span ng-i18next>top_menu.role</span> {{player.Role.name}}
                                 </div>
                             </div>
                         </div>
@@ -167,21 +167,23 @@
 
             <div class="panel">
                 <div class="panel-heading">
-                    <h3>Достоинства <a ng-show="hasCreatePermission('Merit')" href="#" class="link-underlined link-blue" ng-click="showAddDialog()">Добавить</a></h3>
+                    <h3><span ng-i18next>page.merits.header</span>
+                        <a ng-show="hasCreatePermission('Merit')" href="#" class="link-underlined link-blue"
+                           ng-click="showAddDialog()" ng-i18next>popup.add_button</a></h3>
                 </div>
                 <div class="panel-body">
 
                     <table id="merits" class="table table-hover nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>Имя</th>
-                            <th>Категория</th>
-                            <th>Стоимость</th>
-                            <th>Только при создании</th>
-                            <th>Описание</th>
-                            <th>Бонус</th>
-                            <th>Пререквизиты</th>
-                            <th>Действия</th>
+                            <th ng-i18next>table.header.name</th>
+                            <th ng-i18next>table.header.category</th>
+                            <th ng-i18next>table.header.cost</th>
+                            <th ng-i18next>table.header.creation_only</th>
+                            <th ng-i18next>table.header.description</th>
+                            <th ng-i18next>table.header.bonus</th>
+                            <th ng-i18next>table.header.prerequisites</th>
+                            <th ng-i18next>table.header.actions</th>
                         </tr>
                         </thead>
                     </table>
