--- a/public/views/profile/profile.html
+++ b/public/views/profile/profile.html
@@ -49,7 +49,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <h1 ng-i18next>brand_name</h1>
+                    <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
@@ -57,55 +57,55 @@
                     <li>
                         <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_characters</span>
+                            <span ng-i18next>left_menu.characters</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_races</span>
+                            <span ng-i18next>left_menu.races</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                             <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                            <span ng-i18next>left_menu_attributes</span>
+                            <span ng-i18next>left_menu.attributes</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                             <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                            <span ng-i18next>left_menu_inherents</span>
+                            <span ng-i18next>left_menu.inherents</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                             <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                            <span ng-i18next>left_menu_attached_skills</span>
+                            <span ng-i18next>left_menu.attached_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                             <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                            <span ng-i18next>left_menu_trigger_skills</span>
+                            <span ng-i18next>left_menu.trigger_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/merits/merit_manager.html">
                             <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                            <span ng-i18next>left_menu_merits</span>
+                            <span ng-i18next>left_menu.merits</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
                             <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                            <span ng-i18next>left_menu_flaws</span>
+                            <span ng-i18next>left_menu.flaws</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/spells/spells_manager.html">
                             <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                            <span ng-i18next>left_menu_spells</span>
+                            <span ng-i18next>left_menu.spells</span>
                         </a>
                     </li>
                 </ul>
@@ -123,7 +123,7 @@
                         <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
                             <span class="user-name"><span
-                                    ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
+                                    ng-i18next>top_menu.player</span><strong> {{player.name}}</strong></span>
                             <span class="avatar" href="#">
                         <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                              alt="Здесь должен быть аватар">
@@ -132,17 +132,17 @@
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="/views/profile/profile.html"><i
                                     class="dropdown-icon icmn-user"></i><span
-                                    ng-i18next>top_menu_dropdown_profile</span></a>
+                                    ng-i18next>top_menu.dropdown.profile</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
+                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu.dropdown.characters</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
+                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu.dropdown.logout</span></a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                             <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                                ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
-                                    ng-i18next>top_menu_dropdown_admin</span></a>
+                                    ng-i18next>top_menu.dropdown.admin</span></a>
                         </ul>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                         <div class="menu-info-block">
                             <div class="example-buy-btn hidden-xs-down">
                                 <div class="btn expir btn-success-outline btn-rounded">
-                                    <span ng-i18next>top_menu_role</span> {{player.Role.name}}
+                                    <span ng-i18next>top_menu.role</span> {{player.Role.name}}
                                 </div>
                             </div>
                         </div>
@@ -178,15 +178,15 @@
                 <div class="col-md-8">
                     <div class="panel">
                         <div class="panel-heading">
-                            <h3>Личные настройки</h3>
+                            <h3 ng-i18next>page.profile.header</h3>
                         </div>
-                        <div class="panel-body">
-                            Тут будут какие то личные настройки
+                        <div class="panel-body" ng-i18next>
+                            page.profile.stub
                         </div>
                     </div>
                     <div class="panel">
-                        <h3 class="panel-heading">
-                            Последовательность отображения атрибутов
+                        <h3 class="panel-heading" ng-i18next>
+                            page.profile.attribute_sequence
                         </h3>
                         <div class="panel-body">
                             <table id="attrTable" class="table table-hover sorted_table hidden-xs-down hidden-sm-down">
@@ -196,7 +196,7 @@
                                 </tr>
                             </table>
 
-                            <div class="hidden-md-up">Эта фича не доступна в мобильной версии, попробуйте в десктопе</div>
+                            <div class="hidden-md-up" ng-i18next></div>
                         </div>
                     </div>
                 </div>
