--- a/public/views/spells/spells_manager.html
+++ b/public/views/spells/spells_manager.html
@@ -48,7 +48,7 @@
         <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
             <div class="logo-container">
                 <a href="#" class="logo">
-                    <h1 ng-i18next>brand_name</h1>
+                    <h1 ng-i18next>general.brand_name</h1>
                 </a>
             </div>
             <div class="left-menu-inner scroll-pane">
@@ -56,55 +56,55 @@
                     <li>
                         <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_characters</span>
+                            <span ng-i18next>left_menu.characters</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/races/race_manager.html">
                             <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                            <span ng-i18next>left_menu_races</span>
+                            <span ng-i18next>left_menu.races</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                             <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                            <span ng-i18next>left_menu_attributes</span>
+                            <span ng-i18next>left_menu.attributes</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                             <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                            <span ng-i18next>left_menu_inherents</span>
+                            <span ng-i18next>left_menu.inherents</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                             <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                            <span ng-i18next>left_menu_attached_skills</span>
+                            <span ng-i18next>left_menu.attached_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                             <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                            <span ng-i18next>left_menu_trigger_skills</span>
+                            <span ng-i18next>left_menu.trigger_skills</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/merits/merit_manager.html">
                             <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                            <span ng-i18next>left_menu_merits</span>
+                            <span ng-i18next>left_menu.merits</span>
                         </a>
                     </li>
                     <li>
                         <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
                             <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                            <span ng-i18next>left_menu_flaws</span>
+                            <span ng-i18next>left_menu.flaws</span>
                         </a>
                     </li>
                     <li class="left-menu-list-active">
                         <a class="left-menu-link" href="/views/spells/spells_manager.html">
                             <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                            <span ng-i18next>left_menu_spells</span>
+                            <span ng-i18next>left_menu.spells</span>
                         </a>
                     </li>
                 </ul>
@@ -122,7 +122,7 @@
                         <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown"
                            aria-expanded="false">
                             <span class="user-name"><span
-                                    ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
+                                    ng-i18next>top_menu.player</span><strong> {{player.name}}</strong></span>
                             <span class="avatar" href="#">
                         <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                              alt="Здесь должен быть аватар">
@@ -131,17 +131,17 @@
                         <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="/views/profile/profile.html"><i
                                     class="dropdown-icon icmn-user"></i><span
-                                    ng-i18next>top_menu_dropdown_profile</span></a>
+                                    ng-i18next>top_menu.dropdown.profile</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
+                                    class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu.dropdown.characters</span></a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
+                                    class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu.dropdown.logout</span></a>
                             <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                             <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                                ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
-                                    ng-i18next>top_menu_dropdown_admin</span></a>
+                                    ng-i18next>top_menu.dropdown.admin</span></a>
                         </ul>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                         <div class="menu-info-block">
                             <div class="example-buy-btn hidden-xs-down">
                                 <div class="btn expir btn-success-outline btn-rounded">
-                                    <span ng-i18next>top_menu_role</span> {{player.Role.name}}
+                                    <span ng-i18next>top_menu.role</span> {{player.Role.name}}
                                 </div>
                             </div>
                         </div>
@@ -162,39 +162,41 @@
         </nav>
 
         <section class="page-content" id="spells">
-            <h2 class="text-center">Заклинания <a href="javascript:void(0);"
-                                                  class="link-underlined link-blue"
-                                                  ng-click="showSpellForm()">Добавить</a></h2>
+            <h2 class="text-center"><span ng-i18next>page.spells.header</span>
+                <a href="javascript:void(0);" class="link-underlined link-blue"
+                   ng-click="showSpellForm()" ng-i18next>popup.add_button</a></h2>
 
             <div class="panel" style="display: none" id="addFormPanel">
                 <h4 class="panel-heading">
-                    Добавить заклинание
+                    {{form_header}}
                 </h4>
                 <div class="panel-body">
                     <form id="addForm" name="addForm" novalidate>
                         <div class="form-group">
-                            <label for="name" class="form-control-label">Имя:</label>
+                            <label for="name" class="form-control-label" ng-i18next>page.spells.form.name</label>
                             <input type="text" ng-model="name" class="form-control" name="name" id="name" required>
                         </div>
                         <div class="form-group">
-                            <label for="school_id" class="form-control-label">Магическая школа:</label>
+                            <label for="school_id" class="form-control-label"
+                                   ng-i18next>page.spells.form.magic_school</label>
                             <select class="form-control"
                                     name="school_id"
                                     ng-model="school_id" id="school_id"
                                     ng-options="school.id as school.name for school in magicSchools" required>
-                                <option style="display:none" value="">Выберите школу...</option>
+                                <option style="display:none" value="" ng-i18next>page.spells.form.choose_school</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="cost" class="form-control-label">Стоимость:</label>
+                            <label for="cost" class="form-control-label" ng-i18next>page.spells.form.cost</label>
                             <input type="number" ng-model="cost" class="form-control" id="cost" required>
                         </div>
                         <div class="form-group">
-                            <label for="complexity" class="form-control-label">Сложность:</label>
+                            <label for="complexity" class="form-control-label"
+                                   ng-i18next>page.spells.form.complexity</label>
                             <input type="text" ng-model="complexity" class="form-control" id="complexity" required>
                         </div>
                         <div class="form-group">
-                            <label for="creating_complexity" class="form-control-label">Сложность создания:</label>
+                            <label for="creating_complexity" class="form-control-label" ng-i18next>page.spells.form.creating_complexity</label>
                             <input type="text" class="form-control" ng-model="creating_complexity"
                                    id="creating_complexity" required>
                         </div>
@@ -202,23 +204,24 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info" style="font-size: 14px;line-height: 1.3;">
                                     <input id="instant" name="instant" ng-model="instant" type="checkbox">
-                                    <label for="instant">Мгновенное</label>
+                                    <label for="instant" ng-i18next>page.spells.form.instant</label>
                                 </div>
                             </div>
                             <div class="col-md-10">
                                 <div class="checkbox checkbox-info" style="font-size: 14px;line-height: 1.3;">
                                     <input id="modification_needed" name="modification_needed"
                                            ng-model="modification_needed" type="checkbox">
-                                    <label for="modification_needed">Требует модификации</label>
+                                    <label for="modification_needed"
+                                           ng-i18next>page.spells.form.modification_needed</label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="mana" class="form-control-label">Мана:</label>
+                            <label for="mana" class="form-control-label" ng-i18next>page.spells.form.mana</label>
                             <input type="text" ng-model="mana" class="form-control" id="mana" required>
                         </div>
                         <div ng-show="!instant">
-                            <label for="mana_support" class="form-control-label">Поддержание:</label>
+                            <label for="mana_support" class="form-control-label" ng-i18next>page.spells.form.mana_support</label>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -230,41 +233,50 @@
                                     <div class="form-group">
                                         <select class="form-control" id="mana_sup_time" ng-model="mana_sup_time">
                                             <option style="display:none" value=""></option>
-                                            <option value="в раунд">в раунд</option>
-                                            <option value="в минуту">в минуту</option>
-                                            <option value="в час">в час</option>
+                                            <option value="в раунд" ng-i18next>page.spells.options.per_round</option>
+                                            <option value="в минуту" ng-i18next>page.spells.options.per_minute</option>
+                                            <option value="в час" ng-i18next>page.spells.options.per_hour</option>
                                         </select>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="spell_id" class="form-control-label">Базовое заклинание (не
-                                обязательно):</label>
+                            <label for="spell_id" class="form-control-label"
+                                   ng-i18next>page.spells.form.basic_spell</label>
                             <select class="form-control"
                                     name="spell_id"
                                     ng-model="spell_id" id="spell_id"
                                     ng-options="spell.id as spell.name for spell in spells">
-                                <option value="">Нет базового заклинания</option>
+                                <option value="" ng-i18next>page.spells.options.default_option</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="effect" class="form-control-label">Эффект:</label>
+                            <label for="effect" class="form-control-label" ng-i18next>page.spells.form.effect</label>
                             <textarea id="effect" class="form-control" ng-model="effect"></textarea>
                         </div>
                         <div class="form-group">
-                            <label for="description" class="form-control-label">Описание:</label>
+                            <label for="description" class="form-control-label"
+                                   ng-i18next>page.spells.form.description</label>
                             <textarea id="description" ng-model="description" class="form-control"></textarea>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group pull-right" ng-hide="showEditForm">
-                                    <button type="submit" class="btn btn-info margin-inline" ng-click="addSpell()" ng-disabled="addForm.$invalid">Добавить</button>
-                                    <button class="btn margin-inline" ng-click="cancel()">Отмена</button>
+                                    <button type="submit" class="btn btn-info margin-inline" ng-click="addSpell()"
+                                            ng-disabled="addForm.$invalid" ng-i18next>popup.add_button
+                                    </button>
+                                    <button class="btn margin-inline" ng-click="cancel()" ng-i18next>
+                                        popup.cancel_button
+                                    </button>
                                 </div>
                                 <div class="form-group pull-right" ng-show="showEditForm">
-                                    <button type="submit" class="btn btn-info margin-inline" ng-click="updateSpell()" ng-disabled="addForm.$invalid">Сохранить</button>
-                                    <button class="btn margin-inline" ng-click="cancel()">Отмена</button>
+                                    <button type="submit" class="btn btn-info margin-inline" ng-click="updateSpell()"
+                                            ng-disabled="addForm.$invalid" ng-i18next>popup.save_button
+                                    </button>
+                                    <button class="btn margin-inline" ng-click="cancel()" ng-i18next>
+                                        popup.cancel_button
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -279,18 +291,18 @@
                         <table id="{{school.id}}Magic" class="table table-hover nowrap" width="100%">
                             <thead>
                             <tr>
-                                <th>Заклинание</th>
-                                <th>Стоимость</th>
-                                <th>Сложность</th>
-                                <th>Сложность создания</th>
-                                <th>Мана</th>
-                                <th>Поддержание</th>
-                                <th>Мгновенное</th>
-                                <th>Базовое заклинание</th>
-                                <th>Требуется модификация</th>
-                                <th>Эффект</th>
-                                <th>Описание</th>
-                                <th>Действия</th>
+                                <th ng-i18next>table.header.spell</th>
+                                <th ng-i18next>table.header.cost</th>
+                                <th ng-i18next>table.header.difficulty</th>
+                                <th ng-i18next>table.header.creation_difficulty</th>
+                                <th ng-i18next>table.header.mana</th>
+                                <th ng-i18next>table.header.mana_support</th>
+                                <th ng-i18next>table.header.instant</th>
+                                <th ng-i18next>table.header.basic_spell</th>
+                                <th ng-i18next>table.header.modification_needed</th>
+                                <th ng-i18next>table.header.effect</th>
+                                <th ng-i18next>table.header.description</th>
+                                <th ng-i18next>table.header.actions</th>
                             </tr>
                             </thead>
                         </table>
