--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -25,7 +25,7 @@
     <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
         <div class="logo-container">
             <a href="#" class="logo">
-                <h1 ng-i18next>brand_name</h1>
+                <h1 ng-i18next>general.brand_name</h1>
             </a>
         </div>
         <div class="left-menu-inner scroll-pane">
@@ -33,55 +33,55 @@
                 <li class="left-menu-list-active">
                     <a class="left-menu-link" href="/views/user_personage_manager.html?id={{player.id}}">
                         <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                        <span ng-i18next>left_menu_characters</span>
+                        <span ng-i18next>left_menu.characters</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/races/race_manager.html">
                         <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                        <span ng-i18next>left_menu_races</span>
+                        <span ng-i18next>left_menu.races</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
                         <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                        <span ng-i18next>left_menu_attributes</span>
+                        <span ng-i18next>left_menu.attributes</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
                         <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                        <span ng-i18next>left_menu_inherents</span>
+                        <span ng-i18next>left_menu.inherents</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
                         <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                        <span ng-i18next>left_menu_attached_skills</span>
+                        <span ng-i18next>left_menu.attached_skills</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
                         <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                        <span ng-i18next>left_menu_trigger_skills</span>
+                        <span ng-i18next>left_menu.trigger_skills</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/merits/merit_manager.html">
                         <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                        <span ng-i18next>left_menu_merits</span>
+                        <span ng-i18next>left_menu.merits</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
                         <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                        <span ng-i18next>left_menu_flaws</span>
+                        <span ng-i18next>left_menu.flaws</span>
                     </a>
                 </li>
                 <li>
                     <a class="left-menu-link" href="/views/spells/spells_manager.html">
                         <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                        <span ng-i18next>left_menu_spells</span>
+                        <span ng-i18next>left_menu.spells</span>
                     </a>
                 </li>
             </ul>
@@ -97,7 +97,7 @@
             <div class="menu-user-block">
                 <div class="dropdown dropdown-avatar">
                     <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <span class="user-name"><span ng-i18next>top_menu_player</span><strong> {{player.name}}</strong></span>
+                        <span class="user-name"><span ng-i18next>top_menu.player</span><strong> {{player.name}}</strong></span>
                         <span class="avatar" href="#">
                         <img ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{userAvatar(player.id)}}"
                              alt="Здесь должен быть аватар">
@@ -106,17 +106,17 @@
                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
                         <a class="dropdown-item" href="/views/profile/profile.html"><i
                                 class="dropdown-icon icmn-user"></i><span
-                                ng-i18next>top_menu_dropdown_profile</span></a>
+                                ng-i18next>top_menu.dropdown.profile</span></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i
-                                class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu_dropdown_characters</span></a>
+                                class="dropdown-icon icmn-circle-right"></i><span ng-i18next>top_menu.dropdown.characters</span></a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i
-                                class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu_dropdown_logout</span></a>
+                                class="dropdown-icon icmn-exit"></i><span ng-i18next>top_menu.dropdown.logout</span></a>
                         <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
                         <a class="dropdown-item" href="/views/permissions/managePermissions.html"
                            ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i><span
-                                ng-i18next>top_menu_dropdown_admin</span></a>
+                                ng-i18next>top_menu.dropdown.admin</span></a>
                     </ul>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                     <div class="menu-info-block">
                         <div class="example-buy-btn hidden-xs-down">
                             <div class="btn expir btn-success-outline btn-rounded">
-                                <span ng-i18next>top_menu_role</span> {{player.Role.name}}
+                                <span ng-i18next>top_menu.role</span> {{player.Role.name}}
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
         <div ng-controller="addPersonageController">
             <section class="panel">
                 <div class="panel-heading">
-                    <h3 class="text-center" ng-i18next>add_character_header</h3>
+                    <h3 class="text-center" ng-i18next>page.characters.add_character_header</h3>
                 </div>
                 <div class="panel-body">
                     <br>
@@ -150,28 +150,30 @@
                         <div class="row">
                             <div class="col-lg-3">
                                 <div class="form-group">
-                                    <label class="form-label" for="name" ng-i18next>name_label</label>
+                                    <label class="form-label" for="name" ng-i18next>page.characters.name_label</label>
                                     <input class="form-control form-control-rounded" name="personageName"
-                                           ng-i18next="[placeholder]name_placeholder" id="name" ng-model="name"
+                                           ng-i18next="[placeholder]page.characters.name_placeholder" id="name"
+                                           ng-model="name"
                                            type="text" required>
                                 </div>
                             </div>
                             <div class="col-lg-3">
                                 <div class="form-group" ng-click="selectRefresh()">
-                                    <label for="race_id" ng-i18next>race_label</label>
+                                    <label for="race_id" ng-i18next>page.characters.race_label</label>
 
                                     <select class="form-control form-control-rounded"
                                             name="race"
                                             ng-model="race_id" id="race_id"
                                             ng-options="race.id as race.name for race in races" required>
-                                        <option style="display:none" value="" ng-i18next>race_selection_placeholder
+                                        <option style="display:none" value="" ng-i18next>
+                                            page.characters.race_selection_placeholder
                                         </option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-lg-3">
                                 <div class="form-group">
-                                    <label class="form-label" for="experience" ng-i18next>experience_label</label>
+                                    <label class="form-label" for="experience" ng-i18next>page.characters.experience_label</label>
                                     <input class="form-control form-control-rounded" id="experience"
                                            name="experience" ng-model="experience" min="0" type="number" required>
                                 </div>
@@ -182,7 +184,8 @@
                                     <button type="submit" id="createPersonageButton"
                                             class="btn btn-rounded btn-block btn-info"
                                             ng-disabled="createPersonageForm.$invalid"
-                                            ng-click="createPersonage()" ng-i18next>create_character_button
+                                            ng-click="createPersonage()" ng-i18next>
+                                        page.characters.create_character_button
                                     </button>
                                 </div>
                             </div>
@@ -196,18 +199,19 @@
         <div ng-controller="personageListController">
 
             <section class="panel">
-                <div class="panel-heading"><h3 class="text-center" ng-i18next>my_characters_header</h3></div>
+                <div class="panel-heading"><h3 class="text-center" ng-i18next>page.characters.my_characters_header</h3>
+                </div>
                 <div class="panel-body">
                     <div ng-show="hasViewPermission('AllPersonages')">
                         <button type="button" class="btn btn-rounded btn-success margin-inline"
-                                ng-click="showAllPersonages()" ng-i18next>show_all_characters_button
+                                ng-click="showAllPersonages()" ng-i18next>page.characters.show_all_characters_button
                         </button>
                         <button type="button" class="btn btn-rounded btn-info margin-inline"
-                                ng-click="showMyPersonages()" ng-i18next>show_my_characters_button
+                                ng-click="showMyPersonages()" ng-i18next>page.characters.show_my_characters_button
                         </button>
                     </div>
                     <h4 class="text-center" ng-show="personages.length == 0">
-                        <small ng-i18next>empty_characters_list_message</small>
+                        <small ng-i18next>page.characters.empty_characters_list_message</small>
                     </h4>
                     <div class="row messaging">
                         <div class="messaging-list">
@@ -216,33 +220,33 @@
                                 <div class="s1">
                                     <img class="avatar" ng-click="uploadPersonageAvatar(personage.id)"
                                          ng-src="http://res.cloudinary.com/hjzqny4m9/image/upload/v1497780414/{{avatar(personage.id)}}"
-                                         ng-i18next="[alt]alt_avatar">
+                                         ng-i18next="[alt]page.characters.alt_avatar">
                                 </div>
                                 <div class="s2">
                                     <h4>{{personage.name}}</h4>
                                     <a href="/views/personage_logic/view_personage.html?id={{personage.id}}">
                                         <button class="btn btn-rounded btn-sm btn-success-outline margin-inline">
                                             <i class="icmn-eye4"></i>
-                                            <span ng-i18next>character_view_button</span>
+                                            <span ng-i18next>page.characters.character_view_button</span>
                                         </button>
                                     </a>
                                     <a href="/views/personage_logic/create_personage.html?id={{personage.id}}">
                                         <button ng-hide="personage.generated"
                                                 class="btn btn-rounded btn-sm btn-info-outline margin-inline"><i
                                                 class="fa fa-pencil"></i>
-                                            <span ng-i18next>character_creation_button</span>
+                                            <span ng-i18next>page.characters.continue_creation_button</span>
                                         </button>
                                     </a>
                                     <a href="/views/personage_logic/edit_personage.html?id={{personage.id}}">
                                         <button class="btn btn-rounded btn-sm btn-warning-outline margin-inline">
                                             <i class="fa fa-universal-access"></i>
-                                            <span ng-i18next>character_boost_button</span>
+                                            <span ng-i18next>page.characters.character_boost_button</span>
                                         </button>
                                     </a>
                                     <button ng-click="deletePersonage(personage)"
                                             class="btn btn-rounded btn-sm btn-danger-outline margin-inline"><i
                                             class="fa fa-trash"></i>
-                                        <span ng-i18next>delete_character_button</span>
+                                        <span ng-i18next>page.characters.delete_character_button</span>
                                     </button>
                                 </div>
                             </div>
