--- a/public/views/merits/merit.html
+++ b/public/views/merits/merit.html
@@ -184,7 +184,7 @@
                             <label class="control-label col-sm-2" for="type" ng-i18next>page.merit_prerequisites.form.label.type</label>
 
                             <div class="col-sm-10">
-                                <select class="selectpicker form-control"
+                                <select class="form-control"
                                         ng-model="type" ng-change="isInherentValueRequired = false" id="type"
                                         required>
                                     <option style="display:none" value="" ng-i18next>
