--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -657,7 +657,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input name="magic" type="checkbox" ng-model="filter.magic" id="magicSkillsFilter"
-                                           ng-change="filterAttachedSkillsByCategory('магические', filter.magic)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.magic', filter.magic)">
                                     <label for="magicSkillsFilter" ng-i18next>
                                         page.character.attached_skills_categories.magic
                                     </label>
@@ -665,7 +665,7 @@
                                 <div class="checkbox checkbox-info">
                                     <input id="socialSkillsFilter" name="social" type="checkbox"
                                            ng-model="filter.attached_social"
-                                           ng-change="filterAttachedSkillsByCategory('социальные', filter.attached_social)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.social', filter.attached_social)">
                                     <label for="socialSkillsFilter" ng-i18next>
                                         page.character.attached_skills_categories.social
                                     </label>
@@ -675,7 +675,7 @@
                                 <div class="checkbox checkbox-info">
                                     <input name="languages" type="checkbox" ng-model="filter.language"
                                            id="languageFiler"
-                                           ng-change="filterAttachedSkillsByCategory('языки', filter.language)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.languages', filter.language)">
                                     <label for="languageFiler" ng-i18next>
                                         page.character.attached_skills_categories.languages
                                     </label>
@@ -683,7 +683,7 @@
                                 <div class="checkbox checkbox-info">
                                     <input id="knowledgeSkillsFilter" name="knowledge" type="checkbox"
                                            ng-model="filter.knowledge"
-                                           ng-change="filterAttachedSkillsByCategory('знания', filter.knowledge)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.lores', filter.knowledge)">
                                     <label for="knowledgeSkillsFilter" ng-i18next>
                                         page.character.attached_skills_categories.lores
                                     </label>
@@ -692,7 +692,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="craftsSkillsFilter" name="crafts" type="checkbox" ng-model="filter.craft"
-                                           ng-change="filterAttachedSkillsByCategory('ремесла', filter.craft)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.crafts', filter.craft)">
                                     <label for="craftsSkillsFilter" ng-i18next>
                                         page.character.attached_skills_categories.crafts
                                     </label>
@@ -700,7 +700,7 @@
                                 <div class="checkbox checkbox-info">
                                     <input id="profSkillsFilter" name="professional" type="checkbox"
                                            ng-model="filter.prof"
-                                           ng-change="filterAttachedSkillsByCategory('профессиональные', filter.prof)">
+                                           ng-change="filterAttachedSkillsByCategory('page.character.attached_skills_categories.professional', filter.prof)">
                                     <label for="profSkillsFilter" ng-i18next>
                                         page.character.attached_skills_categories.professional
                                     </label>
