--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -540,8 +540,8 @@
                                     <button class="btn slide-button" id="characteristics"
                                             ng-click="openHideAttributesCategoriesFilterMenu()"
                                             hm-swipeup="openHideAttributesCategoriesFilterMenu()"
-                                            hm-swipedown="openHideAttributesCategoriesFilterMenu()" ng-i18next>
-                                        page.character.derivatives
+                                            hm-swipedown="openHideAttributesCategoriesFilterMenu()">
+                                        <span ng-i18next>page.character.derivatives</span>
                                         <i class="fa fa-angle-double-down" ng-hide="isCategoryAttributesMenuClose"></i>
                                         <i class="fa fa-angle-double-up" ng-show="isCategoryAttributesMenuClose"></i>
                                     </button>
