--- a/public/views/permissions/managePermissions.html
+++ b/public/views/permissions/managePermissions.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Управление доступом</title>
+    <title>Manage permissions</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- Clean UI Styles -->
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
