--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Персонаж</title>
+    <title>Character advancement</title>
 
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
