--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -751,8 +751,8 @@
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideAttachedSkillsCategoriesFilerMenu()"
                                      hm-swipeup="openHideAttachedSkillsCategoriesFilerMenu()"
-                                     hm-swipedown="openHideAttachedSkillsCategoriesFilerMenu()" ng-i18next>
-                                    page.character.categories_label_mobile
+                                     hm-swipedown="openHideAttachedSkillsCategoriesFilerMenu()"><span ng-i18next>
+                                    page.character.categories_label_mobile</span>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryAttachedSkillsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryAttachedSkillsMenuClose"></i>
                                 </div>
@@ -1029,8 +1029,8 @@
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideTriggerSkillsCategoriesFilerMenu()"
                                      hm-swipeup="openHideTriggerSkillsCategoriesFilerMenu()"
-                                     hm-swipedown="openHideTriggerSkillsCategoriesFilerMenu()" ng-i18next>
-                                    page.character.categories_label_mobile
+                                     hm-swipedown="openHideTriggerSkillsCategoriesFilerMenu()"><span ng-i18next>
+                                    page.character.categories_label_mobile</span>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryTriggerSkillsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryTriggerSkillsMenuClose"></i>
                                 </div>
@@ -1300,8 +1300,8 @@
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideMeritsCategoriesFilterMenu()"
                                      hm-swipeup="openHideMeritsCategoriesFilterMenu()"
-                                     hm-swipedown="openHideMeritsCategoriesFilterMenu()" ng-i18next>
-                                    page.character.categories_label_mobile
+                                     hm-swipedown="openHideMeritsCategoriesFilterMenu()"><span ng-i18next>
+                                    page.character.categories_label_mobile</span>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryMeritsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryMeritsMenuClose"></i>
                                 </div>
@@ -1571,8 +1571,8 @@
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideFlawsCategoriesFilterMenu()"
                                      hm-swipeup="openHideFlawsCategoriesFilterMenu()"
-                                     hm-swipedown="openHideFlawsCategoriesFilterMenu()" ng-i18next>
-                                    page.character.categories_label_mobile
+                                     hm-swipedown="openHideFlawsCategoriesFilterMenu()"><span ng-i18next>
+                                    page.character.categories_label_mobile</span>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategoryFlawsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategoryFlawsMenuClose"></i>
                                 </div>
@@ -1774,8 +1774,8 @@
                             <nav class="c-menu c-menu--slide-bottom">
                                 <div class="slide-down-button" ng-click="openHideSpellsCategoriesFilterMenu()"
                                      hm-swipeup="openHideSpellsCategoriesFilterMenu()"
-                                     hm-swipedown="openHideSpellsCategoriesFilterMenu()" ng-i18next>
-                                    page.character.categories_label_mobile
+                                     hm-swipedown="openHideSpellsCategoriesFilterMenu()"><span ng-i18next>
+                                    page.character.categories_label_mobile</span>
                                     <i class="fa fa-angle-double-down" ng-hide="isCategorySpellsMenuClose"></i>
                                     <i class="fa fa-angle-double-up" ng-show="isCategorySpellsMenuClose"></i>
                                 </div>
