--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -7,7 +7,7 @@
     <title>Character creation</title>
 
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="/assets/common/css/main.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-select/dist/css/bootstrap-select.min.css">
 
@@ -34,6 +34,7 @@
     <script src="/node_modules/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
     <script src="/node_modules/ng-i18next/dist/ng-i18next.min.js"></script>
     <script src="/views/i18-initialization.js"></script>
+    <script src="/node_modules/angular-load/dist/angular-load.min.js"></script>
 
     <script src="/assets/common/js/common.min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
